apps page spacing fix

--- a/frontend/website-client/src/components/panels/app-teaser.scss
+++ b/frontend/website-client/src/components/panels/app-teaser.scss
@@ -34,7 +34,7 @@
   display: flex;
   flex-direction: column;
   width: 65%;
-  padding: 1.2em 1em 1em; 
+  padding: 1.2em 1em; 
   
   p {
     margin-bottom: 1em;
