--- a/frontend/website-client/src/components/panels/panels.scss
+++ b/frontend/website-client/src/components/panels/panels.scss
@@ -27,7 +27,7 @@
     
     li {
       width: 50%;
-      height: 30px;
+      height: 28px;
       
       @include media-breakpoint-up(sm) { 
         height: 40px;
